tests/snapshots/blank_lines/stacked_decorators.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/stacked_decorators.input.py
---
blank-lines@239..241
