tests/snapshots/blank_lines/top_level_defs.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/top_level_defs.input.py
---
blank-lines@197..199
