tests/snapshots/blank_lines/top_level_defs.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/top_level_defs.input.py
---
"""
Two module-level defs separated by a single blank line expand to the
canonical 2-blank separation. The rule replaces the inter-statement
whitespace run in place.
"""


def first():
    return 1


def second():
    return 2
