tests/snapshots/blank_lines/trailing_comment_on_predecessor.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/trailing_comment_on_predecessor.input.py
---
blank-lines@221..223
