tests/snapshots/blank_lines/with_comments.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/with_comments.input.py
---
blank-lines@239..240
