tests/snapshots/blank_lines/with_comments.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/with_comments.input.py
---
"""
An own-line comment between two statements forms the second
statement's leading block. The rule normalizes the canonical gap
above the comment and binds the comment tight against the following
statement.
"""


def first():
    return 1


# describes the second helper
def second():
    return 2
